# sympy

./: main.py  pyproject.toml
