[tool.poetry]
name = "repl_python3_sympy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
robotics-sympy = "^1.0.0"
ipython = "^7.24.1"
sympy = "^1.8"
display = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
